lcs-monlcs (2.1-1) LcsXP; urgency=low

  [ Jean-Luc Chretien ]
  * Correct changelog with section UNRELEASED
  * Restructuring the architecture of the package (svn_builpackage compatibilty)

  [ Sebastien Tack ]
  * Remove phantom image url from style.css
  * Bug correction for multiple targets in Scenarios
  * Remove debug information
  * Add cleanaccent function
  * Missing noaccent function
  * Fix monlcs_is_admin right when updating contextual menu
  * Add contextuals tutorials for "scenario"
  * modify sql install script
  * adjust zindex when note saving

 -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 13 Nov 2008 13:16:39 +0100

lcs-monlcs (2.1) LcsXP; urgency=low

 [Jean-Luc Chretien]
 * Release package in LcsXP 2.1 version with rev 1908
 * ReBack to #PASS# in /var/lib/lcs/monlcs/Mod/Config/config.inc.ph

 [ Sebastien Tack ] 
 * bugs on description renaming when student viewing mode
 * target groups appear in one set for proposed resources
 * managing the concurents resources (if conflict all  each teacher can view a url)
 * fix some bugs about sharing policy - groups list
 * missing rename function for "scenario"
 * adding class InputFilter to secure note content ( thanks to misterphi )
 * bugs when adding new url if description content  accents chars
 * bug renaming resource from resource box
 * bug in sql file source for sarge
 * fixing bugs on IE and safari browsers about notes editing
 * pencil bugs fixs
 * Cleaning and setting configuration for fckeditor
 * Fixing some bugs about notes editing and tab renaming
 * Adding note editing capability in personals tabs
 * Notes can be shared and saved as html & automatically adding to resource box
 * Adding Debug information when no title in "Scenarios pedagiques"
 * Adding info-bubbles for buttons
 * Update of usr/share/doc with updates pictures
 * Adding new stuff  :
	- managing tab(perso tab and etablissement tab ) 